--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="cabecalho">
 
-        <h1 class="cabecalho__titulo"><img class="cabecalho__imagem" src="images(19).jpeg" alt="Caue"></h1>
+        <h1 class="cabecalho__titulo"><img class="cabecalho__imagem" src="img/WhatsApp Image 2023-09-29 at 08.56.52.jpeg""Caue"></h1>
 
         <ul class="cabecalho__menu">
             <li class="cabecalho__menu-item"> Sobre</li>
