--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <section class="escola">
             <div class="escola__div">
-                <h2 class="escola__titulo">Escola Estadual comendador commendador geremias lunardelli</h2>
+                <h2 class="escola__titulo">Escola Estadual commendador geremias lunardelli</h2>
                 <p class="escola__paragrafo">aqui vou coloar um texto falando sobrea minha escola que é do campo e muito
                     linda</p>
             </div>
