--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <section class="escola">
             <div class="escola__div">
-                <h2 class="escola__titulo">Escola Estadual commendador geremias lunardelli</h2>
+                <h2 class="escola__titulo">Escola Estadual comendador geremias lunardelli</h2>
                 <p class="escola__paragrafo">
                     </p>
             </div>
