--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <img class="img/12230508995_7c9bb7e586_o.jpg" src="img/12230508995_f34718cfa5_w.jpg" alt="foto da escola estadual do campo cerrado das cinzas">
 
         </section>
-        <section class="professores">
+        <section class="colégio">
             
             <div class="professores__div">
                 <img class="professores__div-imagem" src="avatar.jpeg" alt="foto do professor">
