--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Site da Turma K </title>
+    <title>Site colégio </title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
 
         <ul class="cabecalho__menu">
             <li class="cabecalho__menu-item"> Sobre</li>
-            <li class="cabecalho__menu-item"> Professores</li>
+            <li class="cabecalho__menu-item"> colégio</li>
         </ul>
 
     </header>
